<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Apani</string>
    <string name="welcome">Selamat Datang!</string>
    <string name="desc_landing">Masuk aplikasi untuk menikmati fitur-fitur menarik yang disediakan!</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="hello">Halo!</string>
    <string name="desc_login">Silakan masuk ke akun Anda untuk mengakses fitur-fitur yang tersedia.</string>
    <string name="hi">Hai!</string>
    <string name="desc_register">Daftarlah untuk membuat akun baru dan nikmati fitur-fitur yang tersedia.</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa password?</string>
    <string name="have_no_account">Belum punya akun?</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="placeholder_username">johndoe</string>
    <string name="placeholder_email">johndoe@gmail.com</string>
    <string name="placeholder_password">*******</string>
    <string name="article">Artikel</string>
    <string name="article_title">Judul Artikel</string>
    <string name="writer">Penulis</string>
    <string name="hello_user">Halo, %s</string>
    <string name="today_date">Senin, 21 Mei 2023</string>
    <string name="temperature">12°C</string>
    <string name="feature">Fitur</string>
    <string name="new_project">Buat Project Baru</string>
    <string name="desc_new_project">Mulailah petualangan Anda dengan proyek baru ini</string>
    <string name="recommend_plant">Rekomendasi Tanaman</string>
    <string name="desc_recommend_plant">Dapatkan rekomendasi sesuai daerah Anda</string>
    <string name="predict_fertilizer">Prediksi Pupuk</string>
    <string name="desc_predict_fertilizer">Dapatkan prediksi yang sesuai dengan tanaman</string>
    <string name="detect_disease">Deteksi Penyakit</string>
    <string name="desc_detect_disease">Ketahui penyakit tanaman melalui scan tanaman</string>
    <string name="home">Beranda</string>
    <string name="project">Proyek</string>
    <string name="profile">Profil</string>
    <string name="total_project">Total Project</string>
    <string name="total_project_number">4</string>
    <string name="ongoing">Berlangsung</string>
    <string name="ongoing_number">2</string>
    <string name="finish">Selesai</string>
    <string name="finish_number">2</string>
    <string name="title_project">Judul Project</string>
    <string name="description_project">Deskripsi Project</string>
    <string name="cover_article">cover article</string>
    <string name="icon_back">icon back</string>
    <string name="title_article">Hadapi El Nino, Petani Dorong Pemerintah Siapkan Rekayasa Hujan</string>
    <string name="author_article">Mochamad Solehudin</string>
    <string name="date_article">Rabu, 10 Mei 2023 12:52 WIB</string>
    <string name="detail_article">Bandung - Pemerintah melalui Kementerian Pertanian (Kementan) membuat sejumlah langkah untuk mengantisipasi dampak buruk kemarau panjang terhadap sektor pertanian. Mulai dari pelaksanaan program Asuransi Usaha Tani Padi (AUTP), pembangunan embung/waduk, rehabilitasi irigasi hingga hibah pompar air.Baca artikel detikjabar, "Hadapi El Nino, Petani Dorong Pemerintah Siapkan Rekayasa Hujan" \n\nRagam upaya yang dilakukan oleh Kementan itu cukup dirasakan baik oleh para petani di daerah, salah satunya di Kabupaten Purwakarta. Para petani cukup terbantu dengan ragam program tersebut.\n\n"Saya sudah merasakan (manfaat) berbagai program Kementan itu, mulai dari asuransi, pembangunan embung, rehabilitasi irigasi, dan lainnya. Berkat program Kementan, petani di Purwakarta terbantu," kata Adi Saputra, Ketua KTNA (Kelompok Tani Nelayan Andalan), Rabu (10/5/2023).Baca artikel detikjabar, "Hadapi El Nino, Petani Dorong Pemerintah Siapkan Rekayasa Hujan"</string>
    <string name="detect_disease_description">Arahkan tanamanmu ke kamera</string>
    <string name="detect_disease_title">Apakah Tanamanmu Sakit?</string>
    <string name="image_preview">image preview</string>
    <string name="image_disease">image sakit</string>
    <string name="detect_disease_button">Periksa</string>
    <string name="detect_disease_result">Hasil deteksi</string>
    <string name="detect_disease_result_description">Berikut adalah hasil deteksi kami terhadap kondisi tanaman Anda. Tanaman Anda dalam keadaan</string>
    <string name="detect_result"></string>
    <string name="your_location">Lokasimu</string>
    <string name="location">Jakarta</string>
    <string name="temperature_value">20.8</string>
    <string name="temperature_title">Temp</string>
    <string name="humidity_value">82.0</string>
    <string name="humidity_title">Hum</string>
    <string name="ph_value">6.50</string>
    <string name="ph_title">PH</string>
    <string name="recommendation">Rekomendasi tanaman untukmu...</string>
    <string name="recommendation_result_description">Berikut adalah hasil rekomendasi kami terhadap lokasi dan cuaca lingkungan Anda. Tanaman yang cocok adalah</string>
    <string name="recommendation_result"></string>
    <string name="choose_crops_type">Pilih Jenis Tanaman</string>
    <string name="choose_soil_type">Pilih Jenis Tanah</string>
    <string name="description_project_explanation">Penjelasan Deskripsi Penjelasan Deskripsi Penjelasan Deskripsi</string>
    <string name="list_circle">List Circle</string>
    <string name="date_project">Jangka Waktu</string>
    <string name="date_project_description">18 Mei 2023 - 18 Agustus 2023</string>
    <string name="note_project">Catatan</string>
    <string name="note_project_description">Buat bedengan pada lahan anda dan berikan jarak antara 100 cm x 40 cm. Kedalaman tanam sedalam 3 – 5 cm. Dalam satu lubang berisi 2 biji jagung.Tutup kembali lubang yang telah diberi bibit lalu anda siram.</string>
    <string name="crops_type">Jagung</string>
    <string name="crops_title">Tanaman</string>
    <string name="soil_type">Sandy</string>
    <string name="soil_title">Tanah</string>
    <string name="fertilizer_description">Berikut adalah hasil rekomendasi kami terhadap jenis tanaman dan tanah Anda. Pupuk yang cocok untuk tanaman Anda adalah</string>
    <string name="fertilizer_result">UREA</string>
    <string name="show_fertilizer">Tampilkan Pupuk</string>
    <string name="preference">Preferensi</string>
    <string name="logout">Keluar</string>
    <string name="add_project_title">Tambah Project</string>
    <string name="add_project">Tambahkan</string>
    <string name="permission_is_not_allowed">Tidak mendapatkan izin mengakses lokasi</string>
    <string name="input_first">Masukkan data terlebih dahulu</string>
    <string name="input_correctly">Masukkan data dengan benar</string>
    <string name="sure">Apakah Kamu Yakin?</string>
    <string name="yes">Ya</string>
    <string name="register_failed">Daftar Gagal</string>
    <string name="register_success">Daftar Berhasil</string>
    <string name="no">Tidak</string>
    <string name="press_back_again_to_exit">Tekan tombol kembali lagi untuk keluar</string>
    <string name="good_morning">Selamat Pagi</string>
    <string name="good_afternoon">Selamat Siang</string>
    <string name="good_afternoon_sore">Selamat Sore</string>
    <string name="good_evening">Selamat Malam</string>
    <string name="generate_crop">Generate Tanaman</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="desc_coming_soon">Nantikan fitur terbaru kami segera!</string>
</resources>