<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/tv_halo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:fontFamily="@font/nunito_bold"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_desc_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_login"
        android:fontFamily="@font/nunito_regular"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_halo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_email_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="14sp"
        android:fontFamily="@font/nunito_semibold"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc_login" />

    <com.twelvenfive.apani.customView.EmailEditText
        android:id="@+id/et_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder_email"
        android:fontFamily="@font/nunito_regular"
        android:textSize="14sp"
        android:background="@drawable/textfield_outline_primary"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="14sp"
        android:fontFamily="@font/nunito_semibold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_login" />

    <com.twelvenfive.apani.customView.PasswordEditText
        android:id="@+id/et_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder_password"
        android:fontFamily="@font/nunito_regular"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:background="@drawable/textfield_outline_primary"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:fontFamily="@font/nunito_medium"
        android:textSize="14sp"
        android:textColor="@color/pr40"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/et_password_login"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_fill_primary"
        android:text="@string/login"
        android:fontFamily="@font/nunito_medium"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_no_account"
        android:fontFamily="@font/nunito_regular"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_register"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:fontFamily="@font/nunito_medium"
        android:textSize="14sp"
        android:textColor="@color/pr40"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/tv_no_account"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="5dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/pr40"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.672"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>